--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,3 +70,64 @@ img {
   height: 2.0rem;
   border-radius: 50%;
 }
+
+/* search section */
+.search {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+.search__image {
+  width: 17rem;
+  height: 5.75rem;
+}
+.search__mag-icon, .search__mic-icon {
+  width: 0.9125rem;
+  height: 0.9125rem;
+}
+.search__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.search__input-box {
+  display: flex;
+  min-width: 50vw;
+  border: 1.5px solid #eee;
+  padding: 0.75rem;
+  border-radius: 2rem;
+}
+.search__input-box:hover {
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+}
+.search__input {
+  flex: 1;
+  border: none;
+  outline: none;
+  padding: 0 0.5rem;
+}
+
+.search__button {
+  background-color: #f8f9fa;
+  color: #3c4043;
+  border: 1px solid #f8f9fa;
+  border-radius: 4px;
+  padding: 0.25rem 1rem;
+  line-height: 1.6875rem;
+  font-size: inherit;
+  margin: 0 0.25rem;
+  cursor: pointer;
+}
+.search__button:hover {
+  border: 1px solid #dadce0;
+}
+
+.search__languages {
+  font-size: var(--font-sm);
+}
+
+a.search__language {
+  color: #1a0dab;
+}
