--- a/src/css/style.css
+++ b/src/css/style.css
@@ -77,7 +77,12 @@ img {
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-25vw, -25vh);
 }
+
 .search__image {
   width: 17rem;
   height: 5.75rem;
