--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,9 +104,10 @@ img {
   padding: 0.75rem;
   border-radius: 2rem;
 }
-.search__input-box:hover {
+.search__input-box:hover, .search__input-box:focus-within {
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
 }
+
 .search__input {
   flex: 1;
   border: none;
